--- a/client/src/FaultPoint.css
+++ b/client/src/FaultPoint.css
@@ -3,5 +3,5 @@
 }
 
 .fault-marker {
-    z-index: 900;
+    z-index: 950;
   }
